<!--**********************************************************
*   Copyright (c) 2013 Philipp Sommersguter, Julian Tropper  *
*                                                            *
*   See the file LICENCE.txt for copying permission.         *
***********************************************************-->
<resources>

    <string name="app_name">AllGrade</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_student_list_ics">AllGrade</string>

    <!-- Strings for AllGradeActivity.java -->
    <string name="menu_scanCode">Scan Code</string>
    <string name="dialog_barcodeNotInstalled">No Barcode-reader found! Install now?</string>
    <string name="toast_invalidQrCode">Invalid QR-Code!</string>
    <string name="nodata">No data</string>
    <string name="notImplemented">Feature is not implemented</string>
    <string name="title_activity_grade">New Grading</string>
    <string name="menu_head_markRating">Rating</string>
    <string name="menu_head_markComment">Comment</string>
    <string name="menu_head_markType">Type</string>
    <string name="menu_done">Done</string>
    <string name="dialog_spinnerInput_heading">New Entry</string>
    <string name="dialog_spinnerInput_btn_insert">Insert</string>
    <string name="impossible">Congratulations! \nYou made something impossible happen! :-)</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_serverUpdate">Update Database</string>
    <string name="toast_addCommentInfo">Long press the comment spinner to add a new one.</string>
    <string name="list_loading">Loading Data…</string>
    <string name="toast_noNetworkConnection">No Internet Connection!</string>
    <string name="list_scanNewCode">Scan new QR-Code</string>
    <string name="list_needsInternet">\n(Needs Internet Connection)</string>
    <string name="toast_dataRoamingEnabled">Roaming is enabled! Did not connect to internet to save costs…</string>
    <string name="dialog_subjectChooser_heading">Choose Subject</string>
    <string name="toast_emptySubjectList">You do not have subjects in this class.</string>
    <string name="error_no_account">Could not find valid account!\nPlease add your "Apps for Education" account in the settings…</string>
    <string name="scan_code">Scan a new QR-Code…</string>
    <string name="dialog_deleteLogEntry_heading">Delete Grading of:\n%s</string>
    <string name="dialog_deleteLogEntry_detailComment">Comment:\n\"%s\"</string>
    <string name="dialog_deleteLogEntry_detailRating">Rating: %s</string>
    <string name="dialog_deleteLogEntry_detailType">Type:\n%s</string>
    <string name="toast_teacherNotTeachingClass">You are not teaching in this class!</string>
    <string name="toast_uploadStarted">Upload started</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_synchronise">Log</string>

</resources>